# xml_schema_generator

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: audit.yml  general-wasm.yml  general.yml  release.yml  release_wasm.yml  rust.yml
examples/: options.rs  parse_multiple_xml.rs  quick_xml.rs  serde_xml_rs.rs
src/: args.rs  element.rs  encoding.rs  lib.rs  main.rs  necessity.rs  options.rs  parser.rs
src/element/: identifier.rs  macro_rule.rs
tests/: issue7.rs  test_multilingual_utf16le_nobom.xml
wasm/: Cargo.toml  README.md  index.html
wasm/src/: lib.rs
wasm/www/: index.html  index.js  package-lock.json  package.json
