[package]
name = "xml_schema_generator"
version = "0.6.18"
description = "Create Rust struct for given XML file, that allows to deserliaze the given XML using serde or vice versa"
authors = ["Sebastian Detert <rust-crates@elygor.de>"]
edition = "2021"
license = "Apache-2.0"
repository  = "https://github.com/Thomblin/xml_schema_generator"
readme = "README.md"
keywords = ["xml", "schema", "serde", "deserliaze", "string"]
categories = ["command-line-utilities", "config", "data-structures", "encoding", "parser-implementations"]

[[bin]]
name = "xml_schema_generator"
path = "src/main.rs"

[lib]
name = "xml_schema_generator"
path = "src/lib.rs"

[dependencies]
env_logger = { version = "0.11.8", optional = true }
log = "0.4.27"
quick-xml = {version="0.37.4", features = ["serialize"] }
convert_string = "0.2.0"
clap = { version = "4.5.37", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.7.0"

[features]
env_logger = ["dep:env_logger"]
